# daml-dit-integration-slack

./: Makefile  dabl-integration-slack-1.0.1.dit  dabl-integration-slack-1.2.1.dar  dabl-integration-slack-1.2.2.dar  dabl-integration-slack-2.0.0.dar  dabl-integration-slack-2.0.0.dit  dabl-meta.yaml  daml.yaml  dit-meta.yaml  pyproject.toml  requirements.txt
daml/: Modules.daml
daml/SlackIntegration/: Commands.daml  Configuration.daml  InboundDirectMessage.daml  Messages.daml  OutboundMessage.daml  PingPongBot.daml
src/core_int/: integration_slack.py  integration_slack_receive_dm.py  integration_slack_send_message.py  slack_client.py
